--- a/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
@@ -180,6 +180,48 @@
                                                     <constraint firstAttribute="width" secondItem="eXu-jL-9OY" secondAttribute="height" multiplier="125:53" id="HvX-yk-Kwr"/>
                                                 </constraints>
                                             </imageView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R6s-kp-b2C">
+                                                <rect key="frame" x="100" y="577" width="175" height="80"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Environment" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2fi-9T-vBL">
+                                                        <rect key="frame" x="0.0" y="0.0" width="175" height="25"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="25" id="1ip-mh-8by"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="z3u-GQ-hlU">
+                                                        <rect key="frame" x="10" y="35" width="155" height="36"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <segments>
+                                                            <segment title="DEV"/>
+                                                            <segment title="DEMO"/>
+                                                        </segments>
+                                                        <color key="tintColor" red="0.15686274510000001" green="0.83137254900000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                <real key="value" value="10"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                        <connections>
+                                                            <action selector="onChangeSegmentControl:" destination="3T1-w1-Qsx" eventType="valueChanged" id="76v-vT-zf8"/>
+                                                        </connections>
+                                                    </segmentedControl>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="z3u-GQ-hlU" firstAttribute="top" secondItem="2fi-9T-vBL" secondAttribute="bottom" constant="10" id="MLa-SI-XXi"/>
+                                                    <constraint firstItem="z3u-GQ-hlU" firstAttribute="leading" secondItem="R6s-kp-b2C" secondAttribute="leading" constant="10" id="Odk-ev-kZE"/>
+                                                    <constraint firstItem="2fi-9T-vBL" firstAttribute="leading" secondItem="R6s-kp-b2C" secondAttribute="leading" id="VUm-Ff-1lv"/>
+                                                    <constraint firstAttribute="bottom" secondItem="z3u-GQ-hlU" secondAttribute="bottom" constant="10" id="XCs-yU-NTz"/>
+                                                    <constraint firstAttribute="trailing" secondItem="2fi-9T-vBL" secondAttribute="trailing" id="f3y-UI-t8L"/>
+                                                    <constraint firstAttribute="trailing" secondItem="z3u-GQ-hlU" secondAttribute="trailing" constant="10" id="fVP-2Z-vTn"/>
+                                                    <constraint firstItem="2fi-9T-vBL" firstAttribute="top" secondItem="R6s-kp-b2C" secondAttribute="top" id="j69-VI-MAs"/>
+                                                    <constraint firstAttribute="height" constant="80" id="tmI-4i-hQe"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" red="0.2627450980392157" green="0.36078431372549019" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
@@ -187,8 +229,11 @@
                                             <constraint firstAttribute="trailing" secondItem="eXu-jL-9OY" secondAttribute="trailing" id="4Au-xm-7Od"/>
                                             <constraint firstAttribute="bottom" secondItem="eXu-jL-9OY" secondAttribute="bottom" id="5Qb-r5-MW3"/>
                                             <constraint firstItem="au1-ZQ-VK5" firstAttribute="leading" secondItem="99z-PL-E8J" secondAttribute="leading" constant="40" id="Cqf-iT-iMb"/>
+                                            <constraint firstAttribute="bottom" secondItem="R6s-kp-b2C" secondAttribute="bottom" constant="10" id="NCZ-UV-UZt"/>
                                             <constraint firstItem="eXu-jL-9OY" firstAttribute="leading" secondItem="99z-PL-E8J" secondAttribute="leading" id="PFK-NR-xzA"/>
                                             <constraint firstItem="au1-ZQ-VK5" firstAttribute="centerY" secondItem="99z-PL-E8J" secondAttribute="centerY" id="cAp-Vv-GX0"/>
+                                            <constraint firstItem="R6s-kp-b2C" firstAttribute="leading" secondItem="99z-PL-E8J" secondAttribute="leading" constant="100" id="tDL-U2-gRI"/>
+                                            <constraint firstItem="R6s-kp-b2C" firstAttribute="centerX" secondItem="99z-PL-E8J" secondAttribute="centerX" id="wZ1-Zb-79I"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -216,7 +261,9 @@
                         <outlet property="conBotViewLogin" destination="cAp-Vv-GX0" id="hQq-Rg-0K9"/>
                         <outlet property="passwordTextField" destination="evE-GB-VJD" id="9Ec-8b-nc0"/>
                         <outlet property="rememberButton" destination="iZD-KY-mMp" id="RV1-Oo-ygx"/>
+                        <outlet property="segEvironmentControl" destination="z3u-GQ-hlU" id="frx-Sd-a3T"/>
                         <outlet property="userNameTextField" destination="CLG-h3-8g0" id="udY-Qt-Wf4"/>
+                        <outlet property="vEvironment" destination="R6s-kp-b2C" id="DmN-91-Buz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tAy-dY-ufr" sceneMemberID="firstResponder"/>
