--- a/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
@@ -620,23 +620,23 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="60"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OJj-K3-7be" userLabel="SearchCover">
-                                        <rect key="frame" x="10" y="13" width="235" height="34"/>
+                                        <rect key="frame" x="10" y="11.5" width="235" height="37"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_search-1" translatesAutoresizingMaskIntoConstraints="NO" id="km0-pR-9j0" userLabel="Icon">
-                                                <rect key="frame" x="4" y="6" width="22" height="22"/>
+                                                <rect key="frame" x="4" y="6" width="25" height="25"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="km0-pR-9j0" secondAttribute="height" multiplier="1:1" id="gpt-e4-93Y"/>
                                                 </constraints>
                                             </imageView>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search..." textAlignment="natural" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="cJs-Xb-6aI" customClass="HEdit">
-                                                <rect key="frame" x="31" y="2" width="177" height="30"/>
+                                                <rect key="frame" x="34" y="2" width="171" height="33"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="15"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="search"/>
                                             </textField>
                                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BZ4-6X-p52" customClass="HButton" customModule="Ashdod_Dev" customModuleProvider="target">
-                                                <rect key="frame" x="213" y="6" width="22" height="22"/>
+                                                <rect key="frame" x="210" y="6" width="25" height="25"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="BZ4-6X-p52" secondAttribute="height" id="odD-6v-04h"/>
                                                 </constraints>
@@ -645,7 +645,7 @@
                                                 </state>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qtQ-Gk-oMC">
-                                                <rect key="frame" x="4" y="33" width="231" height="1"/>
+                                                <rect key="frame" x="4" y="36" width="231" height="1"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="1" id="0nx-R6-Vap"/>
@@ -683,7 +683,7 @@
                                         <rect key="frame" x="260" y="14" width="100" height="32"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_dropdownblue" translatesAutoresizingMaskIntoConstraints="NO" id="nMA-3u-FR3">
-                                                <rect key="frame" x="75" y="8" width="20" height="16"/>
+                                                <rect key="frame" x="75" y="10" width="20" height="12"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="20" id="Zgg-dc-lrQ"/>
                                                 </constraints>
@@ -1407,7 +1407,7 @@
                                                                     </userDefinedRuntimeAttributes>
                                                                 </label>
                                                                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sjX-6F-7y5">
-                                                                    <rect key="frame" x="324" y="35" width="16" height="22"/>
+                                                                    <rect key="frame" x="300" y="26" width="40" height="40"/>
                                                                     <state key="normal" image="ic_add"/>
                                                                     <connections>
                                                                         <action selector="onbtnClickEditWithBtn:" destination="WXj-B2-1HB" eventType="touchUpInside" id="x1D-eK-zVi"/>
@@ -1487,7 +1487,7 @@
                                                                     <rect key="frame" x="235" y="29" width="100" height="35"/>
                                                                     <subviews>
                                                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_dropdownblue" translatesAutoresizingMaskIntoConstraints="NO" id="0rh-WJ-TfN">
-                                                                            <rect key="frame" x="71" y="9.5" width="24" height="16"/>
+                                                                            <rect key="frame" x="71" y="11.5" width="24" height="12"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="24" id="aMj-Fj-4lH"/>
                                                                             </constraints>
@@ -1628,8 +1628,8 @@
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BAY-Vj-FgP">
                                                             <rect key="frame" x="15" y="0.0" width="345" height="157.5"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" ambiguous="YES" text="Package" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FgI-IO-1al">
-                                                                    <rect key="frame" x="15" y="10" width="54.5" height="16.5"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Package" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FgI-IO-1al">
+                                                                    <rect key="frame" x="15" y="10" width="54.5" height="22.5"/>
                                                                     <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                                     <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -1637,8 +1637,8 @@
                                                                         <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="package"/>
                                                                     </userDefinedRuntimeAttributes>
                                                                 </label>
-                                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dJD-zI-5Qq">
-                                                                    <rect key="frame" x="15" y="36.5" width="310" height="50"/>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dJD-zI-5Qq">
+                                                                    <rect key="frame" x="15" y="42.5" width="310" height="50"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JdS-qP-P1V">
                                                                             <rect key="frame" x="0.0" y="0.0" width="52.5" height="16"/>
@@ -1688,8 +1688,8 @@
                                                                         <constraint firstItem="6Q9-Pz-MK9" firstAttribute="centerY" secondItem="Znm-Nm-8kG" secondAttribute="centerY" id="xDa-lZ-z0F"/>
                                                                     </constraints>
                                                                 </view>
-                                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qfS-sJ-Xkx">
-                                                                    <rect key="frame" x="15" y="92.5" width="310" height="50"/>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qfS-sJ-Xkx">
+                                                                    <rect key="frame" x="15" y="98.5" width="310" height="50"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Carton In Pallets" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yNF-X4-wBS">
                                                                             <rect key="frame" x="0.0" y="0.0" width="103.5" height="16"/>
@@ -1747,8 +1747,8 @@
                                                                         <constraint firstAttribute="height" constant="1" id="9Gf-ed-xbH"/>
                                                                     </constraints>
                                                                 </view>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Content" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Lj-sm-FGf">
-                                                                    <rect key="frame" x="79.5" y="7" width="245.5" height="22.5"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Lj-sm-FGf">
+                                                                    <rect key="frame" x="79.5" y="10.5" width="245.5" height="22"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="Zbu-xk-Dh4"/>
                                                                     </constraints>
@@ -1908,7 +1908,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_dropdownblue" translatesAutoresizingMaskIntoConstraints="NO" id="dxr-la-YVK">
-                                                <rect key="frame" x="115" y="8" width="20" height="16"/>
+                                                <rect key="frame" x="115" y="10" width="20" height="12"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="20" id="asV-aC-ZRH"/>
                                                 </constraints>
